--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "zoidbergcrudapp",
   "version": "1.0.0",
-  "engines":{
-    "node":"16.15.1"
+  "engines": {
+    "node": "16.15.1"
   },
   "description": "",
   "main": "server.js",
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/Apeves89/ZoidbergCRUDapp#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.2"
   }
